додано відносне позиціонування

--- a/index.html
+++ b/index.html
@@ -134,27 +134,36 @@
           <h2 class="section-title title-centered">Чим ми займаємося</h2>
           <ul class="work-list list">
             <li>
-              <img
-                src="./img/img.jpg"
-                alt="Чиїсь руки печатають на клавіатурі код, котра підключена до планшету і великого екрану"
-                width="370"
-              />
+              <div class="work-list-item">
+                <img
+                  src="./img/img.jpg"
+                  alt="Чиїсь руки печатають на клавіатурі код, котра підключена до планшету і великого екрану"
+                  width="370"
+                />
+                <div class="work-image">десктопні додатки</div>
+              </div>
             </li>
 
             <li>
-              <img
-                src="./img/img-2.jpg"
-                alt="Сидяча людина використовує ноутбук і тримає в лівій руці мобільний телефон"
-                width="370"
-              />
+              <div class="work-list-item">
+                <img
+                  src="./img/img-2.jpg"
+                  alt="Сидяча людина використовує ноутбук і тримає в лівій руці мобільний телефон"
+                  width="370"
+                />
+                <div class="work-image">мобільні додатки</div>
+              </div>
             </li>
 
             <li>
-              <img
-                src="./img/img-3.jpg"
-                alt="Чиїсь руки за допомогою стилуса обирають колір з кольорового кругу на планшеті, знаходячись перед персональним комп'ютером"
-                width="370"
-              />
+              <div class="work-list-item">
+                <img
+                  src="./img/img-3.jpg"
+                  alt="Чиїсь руки за допомогою стилуса обирають колір з кольорового кругу на планшеті, знаходячись перед персональним комп'ютером"
+                  width="370"
+                />
+                <div class="work-image">дизайнерські рішення</div>
+              </div>
             </li>
           </ul>
         </div>
