--- a/portfolio.html
+++ b/portfolio.html
@@ -91,11 +91,21 @@
           <ul class="works-list list">
             <li class="works-element">
               <a href="" class="work-link"
-                ><img
-                  src="./img/img-11.jpg"
-                  alt="Відкритий сайт у браузері на екрані ноутбука"
-                  width="370"
-                />
+                ><div class="thumb-portfolio">
+                  <img
+                    src="./img/img-11.jpg"
+                    alt="Відкритий сайт у браузері на екрані ноутбука"
+                    width="370"
+                  />
+                  <div class="tumb-work-text">
+                    <p class="work-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем
+                      функціоналу та сервісів. Все це дозволить відвідувачу
+                      отримати вичерпні відомості про компанію чи приватну
+                      особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="work-card">
                   <h2 class="works-title">Технокряк</h2>
                   <p class="work-item">Веб-сайт</p>
@@ -104,11 +114,20 @@
             </li>
             <li class="works-element">
               <a href="" class="work-link"
-                ><img
-                  src="./img/img-12.jpg"
-                  alt="Два баскетболісти змагаються за мʼяч"
-                  width="370"
-                />
+                ><div class="thumb-portfolio">
+                  <img
+                    src="./img/img-12.jpg"
+                    alt="Два баскетболісти змагаються за мʼяч"
+                    width="370"
+                  />
+                  <div class="tumb-work-text">
+                    <p class="work-text">
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Aperiam ad aut quibusdam recusandae. Nobis culpa itaque
+                      atque tempora mollitia sit ad aperiam.
+                    </p>
+                  </div>
+                </div>
                 <div class="work-card">
                   <h2 class="works-title">Постер New Orlean vs Golden Star</h2>
                   <p class="work-item">Дизайн</p>
@@ -117,11 +136,20 @@
             </li>
             <li class="works-element">
               <a href="" class="work-link"
-                ><img
-                  src="./img/img-13.jpg"
-                  alt="Назва ресторану ʼЗе сифуд ресторанʼ з великою рибою на фоні"
-                  width="370"
-                />
+                ><div class="thumb-portfolio">
+                  <img
+                    src="./img/img-13.jpg"
+                    alt="Назва ресторану ʼЗе сифуд ресторанʼ з великою рибою на фоні"
+                    width="370"
+                  />
+                  <div class="tumb-work-text">
+                    <p class="work-text">
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Aperiam ad aut quibusdam recusandae. Nobis culpa itaque
+                      atque tempora mollitia sit ad aperiam.
+                    </p>
+                  </div>
+                </div>
                 <div class="work-card">
                   <h2 class="works-title">Ресторан Seafood</h2>
                   <p class="work-item">Додаток</p>
@@ -130,11 +158,20 @@
             </li>
             <li class="works-element">
               <a href="" class="work-link"
-                ><img
-                  src="./img/img-14.jpg"
-                  alt="Чорні навушники"
-                  width="370"
-                />
+                ><div class="thumb-portfolio">
+                  <img
+                    src="./img/img-14.jpg"
+                    alt="Чорні навушники"
+                    width="370"
+                  />
+                  <div class="tumb-work-text">
+                    <p class="work-text">
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Aperiam ad aut quibusdam recusandae. Nobis culpa itaque
+                      atque tempora mollitia sit ad aperiam.
+                    </p>
+                  </div>
+                </div>
                 <div class="work-card">
                   <h2 class="works-title">Проект Prime</h2>
                   <p class="work-item">Маркетинг</p>
@@ -143,11 +180,20 @@
             </li>
             <li class="works-element">
               <a href="" class="work-link"
-                ><img
-                  src="./img/img-15.jpg"
-                  alt="Дві коробки- біла та коричнева"
-                  width="370"
-                />
+                ><div class="thumb-portfolio">
+                  <img
+                    src="./img/img-15.jpg"
+                    alt="Дві коробки- біла та коричнева"
+                    width="370"
+                  />
+                  <div class="tumb-work-text">
+                    <p class="work-text">
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Aperiam ad aut quibusdam recusandae. Nobis culpa itaque
+                      atque tempora mollitia sit ad aperiam.
+                    </p>
+                  </div>
+                </div>
                 <div class="work-card">
                   <h2 class="works-title">Проект Boxes</h2>
                   <p class="work-item">Додаток</p>
@@ -156,11 +202,20 @@
             </li>
             <li class="works-element">
               <a href="" class="work-link"
-                ><img
-                  src="./img/img-16.jpg"
-                  alt="Персональний компʼютер Епл з відкритою сторінкою у браузері"
-                  width="370"
-                />
+                ><div class="thumb-portfolio">
+                  <img
+                    src="./img/img-16.jpg"
+                    alt="Персональний компʼютер Епл з відкритою сторінкою у браузері"
+                    width="370"
+                  />
+                  <div class="tumb-work-text">
+                    <p class="work-text">
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Aperiam ad aut quibusdam recusandae. Nobis culpa itaque
+                      atque tempora mollitia sit ad aperiam.
+                    </p>
+                  </div>
+                </div>
                 <div class="work-card">
                   <h2 lang="en" class="works-title">
                     Inspiration has no Borders
@@ -171,11 +226,20 @@
             </li>
             <li class="works-element">
               <a href="" class="work-link"
-                ><img
-                  src="./img/img-17.jpg"
-                  alt="Відкритий журнал, на першій сторінці дівчина з феном, на другій дві дівчини підняли руки вгору зі знаком перемоги ві"
-                  width="370"
-                />
+                ><div class="thumb-portfolio">
+                  <img
+                    src="./img/img-17.jpg"
+                    alt="Відкритий журнал, на першій сторінці дівчина з феном, на другій дві дівчини підняли руки вгору зі знаком перемоги ві"
+                    width="370"
+                  />
+                  <div class="tumb-work-text">
+                    <p class="work-text">
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Aperiam ad aut quibusdam recusandae. Nobis culpa itaque
+                      atque tempora mollitia sit ad aperiam.
+                    </p>
+                  </div>
+                </div>
                 <div class="work-card">
                   <h2 class="works-title">Видання Limited Edition</h2>
                   <p class="work-item">Дизайн</p>
@@ -184,11 +248,20 @@
             </li>
             <li class="works-element">
               <a href="" class="work-link"
-                ><img
-                  src="./img/img-18.jpg"
-                  alt="Бірка з надписом 'Леб ель тег'"
-                  width="370"
-                />
+                ><div class="thumb-portfolio">
+                  <img
+                    src="./img/img-18.jpg"
+                    alt="Бірка з надписом 'Леб ель тег'"
+                    width="370"
+                  />
+                  <div class="tumb-work-text">
+                    <p class="work-text">
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Aperiam ad aut quibusdam recusandae. Nobis culpa itaque
+                      atque tempora mollitia sit ad aperiam.
+                    </p>
+                  </div>
+                </div>
                 <div class="work-card">
                   <h2 class="works-title">Проект LAB</h2>
                   <p class="work-item">Маркетинг</p>
@@ -197,11 +270,20 @@
             </li>
             <li class="works-element">
               <a href="" class="work-link"
-                ><img
-                  src="./img/img-19.jpg"
-                  alt="Чоловічі руки печатають на клавіатурі ноутбука з відкритою сторінкою у браузері"
-                  width="370"
-                />
+                ><div class="thumb-portfolio">
+                  <img
+                    src="./img/img-19.jpg"
+                    alt="Чоловічі руки печатають на клавіатурі ноутбука з відкритою сторінкою у браузері"
+                    width="370"
+                  />
+                  <div class="tumb-work-text">
+                    <p class="work-text">
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Aperiam ad aut quibusdam recusandae. Nobis culpa itaque
+                      atque tempora mollitia sit ad aperiam.
+                    </p>
+                  </div>
+                </div>
                 <div class="work-card">
                   <h2 lang="en" class="works-title">Growing Business</h2>
                   <p class="work-item">Додаток</p>
