--- a/portfolio.html
+++ b/portfolio.html
@@ -97,7 +97,7 @@
                     alt="Відкритий сайт у браузері на екрані ноутбука"
                     width="370"
                   />
-                  <div class="tumb-work-text">
+                  <div class="thumb-work-text">
                     <p class="work-text">
                       Ресурс пропонує комплексні пропозиції з різним рівнем
                       функціоналу та сервісів. Все це дозволить відвідувачу
@@ -120,7 +120,7 @@
                     alt="Два баскетболісти змагаються за мʼяч"
                     width="370"
                   />
-                  <div class="tumb-work-text">
+                  <div class="thumb-work-text">
                     <p class="work-text">
                       Lorem ipsum dolor sit amet consectetur adipisicing elit.
                       Aperiam ad aut quibusdam recusandae. Nobis culpa itaque
@@ -142,7 +142,7 @@
                     alt="Назва ресторану ʼЗе сифуд ресторанʼ з великою рибою на фоні"
                     width="370"
                   />
-                  <div class="tumb-work-text">
+                  <div class="thumb-work-text">
                     <p class="work-text">
                       Lorem ipsum dolor sit amet consectetur adipisicing elit.
                       Aperiam ad aut quibusdam recusandae. Nobis culpa itaque
@@ -164,7 +164,7 @@
                     alt="Чорні навушники"
                     width="370"
                   />
-                  <div class="tumb-work-text">
+                  <div class="thumb-work-text">
                     <p class="work-text">
                       Lorem ipsum dolor sit amet consectetur adipisicing elit.
                       Aperiam ad aut quibusdam recusandae. Nobis culpa itaque
@@ -186,7 +186,7 @@
                     alt="Дві коробки- біла та коричнева"
                     width="370"
                   />
-                  <div class="tumb-work-text">
+                  <div class="thumb-work-text">
                     <p class="work-text">
                       Lorem ipsum dolor sit amet consectetur adipisicing elit.
                       Aperiam ad aut quibusdam recusandae. Nobis culpa itaque
@@ -208,7 +208,7 @@
                     alt="Персональний компʼютер Епл з відкритою сторінкою у браузері"
                     width="370"
                   />
-                  <div class="tumb-work-text">
+                  <div class="thumb-work-text">
                     <p class="work-text">
                       Lorem ipsum dolor sit amet consectetur adipisicing elit.
                       Aperiam ad aut quibusdam recusandae. Nobis culpa itaque
@@ -232,7 +232,7 @@
                     alt="Відкритий журнал, на першій сторінці дівчина з феном, на другій дві дівчини підняли руки вгору зі знаком перемоги ві"
                     width="370"
                   />
-                  <div class="tumb-work-text">
+                  <div class="thumb-work-text">
                     <p class="work-text">
                       Lorem ipsum dolor sit amet consectetur adipisicing elit.
                       Aperiam ad aut quibusdam recusandae. Nobis culpa itaque
@@ -254,7 +254,7 @@
                     alt="Бірка з надписом 'Леб ель тег'"
                     width="370"
                   />
-                  <div class="tumb-work-text">
+                  <div class="thumb-work-text">
                     <p class="work-text">
                       Lorem ipsum dolor sit amet consectetur adipisicing elit.
                       Aperiam ad aut quibusdam recusandae. Nobis culpa itaque
@@ -276,7 +276,7 @@
                     alt="Чоловічі руки печатають на клавіатурі ноутбука з відкритою сторінкою у браузері"
                     width="370"
                   />
-                  <div class="tumb-work-text">
+                  <div class="thumb-work-text">
                     <p class="work-text">
                       Lorem ipsum dolor sit amet consectetur adipisicing elit.
                       Aperiam ad aut quibusdam recusandae. Nobis culpa itaque
